--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git://github.com/expath/expath-parent.git</connection>
-        <developerConnection>scm:git:git://github.com/expath/expath-parent.git</developerConnection>
-        <url>http://github.com/expath/expath-parent</url>
+        <connection>scm:git:https://github.com/expath/expath-parent.git</connection>
+        <developerConnection>scm:git:https://github.com/expath/expath-parent.git</developerConnection>
+        <url>scm:git:https://github.com/expath/expath-parent.git</url>
     </scm>
 
     <mailingLists>
