--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,7 +10,7 @@
 
     <groupId>org.expath</groupId>
     <artifactId>expath-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <name>EXPath Parent POM</name>
@@ -54,7 +53,8 @@
         <connection>scm:git:https://github.com/expath/expath-parent.git</connection>
         <developerConnection>scm:git:https://github.com/expath/expath-parent.git</developerConnection>
         <url>scm:git:https://github.com/expath/expath-parent.git</url>
-    </scm>
+      <tag>expath-parent-1.0.0</tag>
+  </scm>
 
     <mailingLists>
         <mailingList>
