--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <saxon.version>9.9.1-7</saxon.version>
         <xmlcalabash.version>1.1.15-97</xmlcalabash.version>
-        <jing.version>20091111</jing.version>
+        <jing.version>20181222</jing.version>
         <xml.apis.version>1.4.01</xml.apis.version>
     </properties>
 
@@ -89,9 +89,23 @@
                 <version>${xmlcalabash.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.thaiopensource</groupId>
+                <groupId>org.relaxng</groupId>
                 <artifactId>jing</artifactId>
                 <version>${jing.version}</version>
+                <exclusions>
+                    <exclusion> <!-- conflicts -->
+                        <groupId>xml-apis</groupId>
+                        <artifactId>xml-apis</artifactId>
+                    </exclusion>
+                    <exclusion> <!-- conflicts -->
+                        <groupId>net.sf.saxon</groupId>
+                        <artifactId>saxon</artifactId>
+                    </exclusion>
+                    <exclusion> <!-- conflicts -->
+                        <groupId>xerces</groupId>
+                        <artifactId>xercesImpl</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>xml-apis</groupId>
