--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
         <xmlcalabash.version>1.2.5-100</xmlcalabash.version>
         <jing.version>20220510</jing.version>
         <xml.apis.version>1.4.01</xml.apis.version>
+        <slf4j.version>2.0.6</slf4j.version>
     </properties>
 
     <dependencyManagement>
@@ -125,7 +126,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>2.0.6</version>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
