--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.expath</groupId>
     <artifactId>expath-parent</artifactId>
-    <version>1.8.1-SNAPSHOT</version>
+    <version>1.8.1</version>
     <packaging>pom</packaging>
 
     <name>EXPath Parent POM</name>
@@ -53,7 +53,7 @@
         <connection>scm:git:https://github.com/expath/expath-parent.git</connection>
         <developerConnection>scm:git:https://github.com/expath/expath-parent.git</developerConnection>
         <url>scm:git:https://github.com/expath/expath-parent.git</url>
-      <tag>HEAD</tag>
+      <tag>expath-parent-1.8.1</tag>
   </scm>
 
     <mailingLists>
