--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.expath</groupId>
     <artifactId>expath-parent</artifactId>
-    <version>1.9.0</version>
+    <version>1.9.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>EXPath Parent POM</name>
@@ -47,7 +47,7 @@
         <connection>scm:git:https://github.com/expath/expath-parent.git</connection>
         <developerConnection>scm:git:https://github.com/expath/expath-parent.git</developerConnection>
         <url>scm:git:https://github.com/expath/expath-parent.git</url>
-      <tag>expath-parent-1.9.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <mailingLists>
